[gd_scene load_steps=64 format=3 uid="uid://cgh0bx0ywd8gd"]

[ext_resource type="Script" path="res://player/player.gd" id="1_pd0nx"]
[ext_resource type="PackedScene" uid="uid://cgm0rtxp764ux" path="res://weapons/pistol/pistol.tscn" id="2_nydh6"]
[ext_resource type="Shader" path="res://player.gdshader" id="3_mduyb"]
[ext_resource type="Texture2D" uid="uid://c3pwfnoeai35d" path="res://resources/2_Characters/Character_Generator/0_Premade_Characters/32x32/Premade_Character_32x32_07.png" id="4_de221"]
[ext_resource type="Script" path="res://player/walk_player.gd" id="5_51sfr"]
[ext_resource type="AudioStream" uid="uid://covgtx4qomc24" path="res://music/walk/walk_bloop_1.wav" id="6_4lpbn"]
[ext_resource type="Texture2D" uid="uid://bskvh3xu8so1k" path="res://2d_lights_and_shadows_neutral_point_light.webp" id="7_fryos"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3aoxc"]
resource_local_to_scene = true
shader = ExtResource("3_mduyb")
shader_parameter/invincible = false
shader_parameter/dead = false

[sub_resource type="AtlasTexture" id="AtlasTexture_tmohb"]
atlas = ExtResource("4_de221")
region = Rect2(576, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhy78"]
atlas = ExtResource("4_de221")
region = Rect2(608, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_eixcm"]
atlas = ExtResource("4_de221")
region = Rect2(640, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlu8p"]
atlas = ExtResource("4_de221")
region = Rect2(672, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_olfqb"]
atlas = ExtResource("4_de221")
region = Rect2(704, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyxem"]
atlas = ExtResource("4_de221")
region = Rect2(736, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_40q5k"]
atlas = ExtResource("4_de221")
region = Rect2(384, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_5to2v"]
atlas = ExtResource("4_de221")
region = Rect2(416, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_di53s"]
atlas = ExtResource("4_de221")
region = Rect2(448, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_qewr6"]
atlas = ExtResource("4_de221")
region = Rect2(480, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_ue0ux"]
atlas = ExtResource("4_de221")
region = Rect2(512, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_kai63"]
atlas = ExtResource("4_de221")
region = Rect2(544, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryvp2"]
atlas = ExtResource("4_de221")
region = Rect2(0, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ojx4"]
atlas = ExtResource("4_de221")
region = Rect2(32, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqeke"]
atlas = ExtResource("4_de221")
region = Rect2(64, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_427ia"]
atlas = ExtResource("4_de221")
region = Rect2(96, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbc08"]
atlas = ExtResource("4_de221")
region = Rect2(128, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj12g"]
atlas = ExtResource("4_de221")
region = Rect2(160, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_yovx2"]
atlas = ExtResource("4_de221")
region = Rect2(192, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_0k8kl"]
atlas = ExtResource("4_de221")
region = Rect2(224, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_khd7s"]
atlas = ExtResource("4_de221")
region = Rect2(256, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_can8o"]
atlas = ExtResource("4_de221")
region = Rect2(288, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mhqo"]
atlas = ExtResource("4_de221")
region = Rect2(320, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_3somu"]
atlas = ExtResource("4_de221")
region = Rect2(352, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_nh0i5"]
atlas = ExtResource("4_de221")
region = Rect2(576, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd7qd"]
atlas = ExtResource("4_de221")
region = Rect2(608, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nq48"]
atlas = ExtResource("4_de221")
region = Rect2(640, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_wc4qp"]
atlas = ExtResource("4_de221")
region = Rect2(672, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpged"]
atlas = ExtResource("4_de221")
region = Rect2(704, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5pgn"]
atlas = ExtResource("4_de221")
region = Rect2(736, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmyhp"]
atlas = ExtResource("4_de221")
region = Rect2(384, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_qke01"]
atlas = ExtResource("4_de221")
region = Rect2(416, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_cr2n5"]
atlas = ExtResource("4_de221")
region = Rect2(448, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_w60cm"]
atlas = ExtResource("4_de221")
region = Rect2(480, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_e65xb"]
atlas = ExtResource("4_de221")
region = Rect2(512, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ngc8"]
atlas = ExtResource("4_de221")
region = Rect2(544, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_xc5bu"]
atlas = ExtResource("4_de221")
region = Rect2(160, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_muwu7"]
atlas = ExtResource("4_de221")
region = Rect2(128, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_a10h2"]
atlas = ExtResource("4_de221")
region = Rect2(96, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwvxc"]
atlas = ExtResource("4_de221")
region = Rect2(64, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_due1e"]
atlas = ExtResource("4_de221")
region = Rect2(32, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t8k0"]
atlas = ExtResource("4_de221")
region = Rect2(0, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfw7w"]
atlas = ExtResource("4_de221")
region = Rect2(192, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_afj6p"]
atlas = ExtResource("4_de221")
region = Rect2(224, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_osw0g"]
atlas = ExtResource("4_de221")
region = Rect2(256, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_8751x"]
atlas = ExtResource("4_de221")
region = Rect2(288, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_76puy"]
atlas = ExtResource("4_de221")
region = Rect2(320, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7ign"]
atlas = ExtResource("4_de221")
region = Rect2(352, 138, 32, 54)

[sub_resource type="SpriteFrames" id="SpriteFrames_x7pwn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmohb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhy78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eixcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlu8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olfqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyxem")
}],
"loop": true,
"name": &"idle_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_40q5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5to2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di53s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qewr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ue0ux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kai63")
}],
"loop": true,
"name": &"idle_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryvp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ojx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqeke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_427ia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbc08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj12g")
}],
"loop": true,
"name": &"idle_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yovx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0k8kl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khd7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_can8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mhqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3somu")
}],
"loop": true,
"name": &"idle_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nh0i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd7qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nq48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wc4qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpged")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5pgn")
}],
"loop": true,
"name": &"walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmyhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qke01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cr2n5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w60cm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e65xb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ngc8")
}],
"loop": true,
"name": &"walk_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xc5bu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muwu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a10h2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwvxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_due1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t8k0")
}],
"loop": true,
"name": &"walk_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfw7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afj6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osw0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8751x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76puy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7ign")
}],
"loop": true,
"name": &"walk_up",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_eiym5"]
resource_name = "default"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/outline_state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8vdcw"]
_data = {
"default": SubResource("Animation_eiym5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dkms4"]
size = Vector2(27, 10)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_4kcoc"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath(".:gun_rotation")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath(".:gun_scale")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false
properties/3/path = NodePath(".:gun_position")
properties/3/spawn = true
properties/3/sync = true
properties/3/watch = false
properties/4/path = NodePath(".:player_animation")
properties/4/spawn = true
properties/4/sync = true
properties/4/watch = false
properties/5/path = NodePath(".:dead")
properties/5/spawn = true
properties/5/sync = true
properties/5/watch = false

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_kgr5f"]
streams_count = 1
random_pitch = 1.01
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("6_4lpbn")
stream_0/weight = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_idh80"]
size = Vector2(20, 33)

[node name="Player" type="CharacterBody2D"]
process_priority = -10
collision_mask = 0
motion_mode = 1
script = ExtResource("1_pd0nx")
gun_scene = ExtResource("2_nydh6")
health = 3

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_3aoxc")
sprite_frames = SubResource("SpriteFrames_x7pwn")
animation = &"walk_down"
frame = 4
frame_progress = 0.0748563

[node name="RightHand" type="Node2D" parent="AnimatedSprite2D"]
position = Vector2(10, 13)

[node name="LeftHand" type="Node2D" parent="AnimatedSprite2D"]
position = Vector2(-12, 13)

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
autoplay = "default"
libraries = {
"": SubResource("AnimationLibrary_8vdcw")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 26)
shape = SubResource("RectangleShape2D_dkms4")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_4kcoc")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -20.0
offset_top = -61.0
offset_right = 20.0
offset_bottom = -21.0

[node name="player_walk_sounds" type="AudioStreamPlayer2D" parent="."]
script = ExtResource("5_51sfr")

[node name="walk_timer" type="Timer" parent="player_walk_sounds"]

[node name="stream_player" type="AudioStreamPlayer2D" parent="player_walk_sounds"]
stream = SubResource("AudioStreamRandomizer_kgr5f")
volume_db = -12.803
pitch_scale = 0.76

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 6.5)
shape = SubResource("RectangleShape2D_idh80")

[node name="HitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0, 1, 0, 1)
range_layer_min = -400
range_layer_max = -10
texture = ExtResource("7_fryos")
texture_scale = 4.0

[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
